// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Page__PageWrapper-mddda5-0 iaLVNs"
    id="Template E_01"
    rows={null}
  >
    <section
      className="Page__Region-mddda5-2 jCgDZG"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kybLIu"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kbtacK"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 iFiOwu"
      id="D"
      placeholder="D"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 gCyZda"
      id="E"
      placeholder="E"
      tabIndex="0"
    >
      
    </section>
  </section>
</div>
`;

exports[` 2`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Page__PageWrapper-mddda5-0 jLwMge"
    id="Template E_02"
    rows={null}
  >
    <section
      className="Page__Region-mddda5-2 jCgDZG"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kybLIu"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kbtacK"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 iFiOwu"
      id="D"
      placeholder="D"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 gCyZda"
      id="E"
      placeholder="E"
      tabIndex="0"
    >
      
    </section>
  </section>
</div>
`;

exports[` 3`] = `
<div
  style={
    Object {
      "height": "400px",
    }
  }
>
  <section
    className="Grid__GridWrapper-sc-1ntp7gx-0 kfrexs Page__PageWrapper-mddda5-0 hxxQYs"
    id="Template E_03"
    rows={null}
  >
    <section
      className="Page__Region-mddda5-2 jCgDZG"
      id="A"
      placeholder="A"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kybLIu"
      id="B"
      placeholder="B"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 kbtacK"
      id="C"
      placeholder="C"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 iFiOwu"
      id="D"
      placeholder="D"
      tabIndex="0"
    >
      
    </section>
    <section
      className="Page__Region-mddda5-2 gCyZda"
      id="E"
      placeholder="E"
      tabIndex="0"
    >
      
    </section>
  </section>
</div>
`;
